--- a/app/views/dashboard/_portfolio.html.erb
+++ b/app/views/dashboard/_portfolio.html.erb
@@ -7,9 +7,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="/assets/portfolio-1.jpg">
-                                </a>
+                                    <%= image_tag("portfolio-1.jpg", alt: "File Name Fancy",class: "img-portfolio img-responsive" )%>
                             </div>
                         </div>
                         <div class="col-md-6">
